# Tankoban-3

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  Doxyfile  HARBOR_FEATURE_INVENTORY.md  PROGRESS.md  README.md  ROADMAP.md  ROADMAP_BATCH_1_ADDON_STORE.md  ROADMAP_BATCH_3_ANIME_PROVIDER_STACK.md  ROADMAP_BATCH_9_EXTERNAL_SUBTITLES.md  build.bat  build_and_run.bat  setup_libmpv.bat
.codex-history/: 2026-06-17_003937_agent-0_quiet-harbor.trimmed.md  2026-06-17_010521_agent-0_north-signal.raw.md  2026-06-17_010521_agent-0_north-signal.trimmed.md
docs/: harbor-player-spec.md
docs/superpowers/plans/: 2026-06-16-tankoban3-player-01-engine-video.md  2026-06-16-tankoban3-player-02-transport-chrome.md  2026-06-19-sources-list-native-model-view.md
docs/superpowers/specs/: 2026-06-17-comics-unified-mode-vision.md  2026-06-17-western-comics-catalogue-research-brief-followup.md  2026-06-17-western-comics-catalogue-research-brief.md  2026-06-17-western-comics-catalogue-research-report-v2.md  2026-06-17-western-comics-catalogue-research-report.md  2026-06-18-gcd-repo-recon.md  2026-06-18-rco-itunes-enrichment-contract.md  2026-06-19-sources-list-native-model-view-design.md
qml/: FeaturedHero.qml  HomePage.qml  Main.qml  PlayerPage.qml  SeriesPage.qml  SourcesPage.qml
src/: main.cpp  selftest_main.cpp
src/chrome/: AudioMenu.cpp  AudioMenu.h  SeekBar.cpp  SeekBar.h  SpeedMenu.cpp  SpeedMenu.h  SubtitleMenu.cpp  SubtitleMenu.h  TimeLabel.cpp  TimeLabel.h  TitleInfo.cpp  TitleInfo.h  TransportBar.cpp  TransportBar.h  VolumeControl.cpp  VolumeControl.h
src/core/: AddonClient.cpp  AddonClient.h  AddonModels.h  AddonRegistry.cpp  AddonRegistry.h  AddonStoreModels.h  JikanClient.cpp  JikanClient.h  MetaDetail.h  MetaItem.h  MetaService.cpp  MetaService.h  StreamModels.h  StreamParser.cpp  StreamParser.h  StreamScorer.cpp  StreamScorer.h  StreamService.cpp  StreamService.h  StremioAddonsProvider.cpp  StremioAddonsProvider.h
src/core/torrentstream/: LtLinkSmoke.cpp  LtLinkSmoke.h  StreamEngine.cpp  StreamEngine.h
src/engine/: MpvController.cpp  MpvController.h  MpvGlWidget.cpp  MpvGlWidget.h  PlaybackClock.cpp  PlaybackClock.h  PlayerSnapshot.h
src/player/: HotkeyDispatcher.cpp  HotkeyDispatcher.h  PlayerLoadingOverlay.cpp  PlayerLoadingOverlay.h  PlayerView.cpp  PlayerView.h
src/quick/: MpvObject.cpp  MpvObject.h  QuickPlayerBridge.cpp  QuickPlayerBridge.h  main.cpp
src/ui/: AddonCard.cpp  AddonCard.h  AddonsPage.cpp  AddonsPage.h  AnimeHero.cpp  AnimeHero.h  AnimePage.cpp  AnimePage.h  BackToTop.cpp  BackToTop.h  BackdropLayer.cpp  BackdropLayer.h  BrowsePane.cpp  BrowsePane.h  CatalogRow.cpp  CatalogRow.h  CinemaHero.cpp  CinemaHero.h  DetailHero.cpp  DetailHero.h  DetailPage.cpp  DetailPage.h  DiscoverPage.cpp  DiscoverPage.h  EpisodeList.cpp  EpisodeList.h  FeaturedHero.cpp  FeaturedHero.h  FlowLayout.cpp  FlowLayout.h  GridPage.cpp  GridPage.h  HomePage.cpp  HomePage.h  Icons.h  MainWindow.cpp  MainWindow.h  PeekHero.cpp  PeekHero.h  PickerHeader.cpp  (+30 more)
src/util/: Theme.h  TimeFormat.cpp  TimeFormat.h  VolumeCurve.cpp  VolumeCurve.h
